# ProteiTest2023

./: .gitignore  CMakeLists.txt  README.md  config.json
include/: call_center.h  cdr.h  cdr_request.h  cdr_request_queue.h  config_reader.h  logger.h  operator.h  server.h  session.h
src/: CMakeLists.txt  call_center.cpp  cdr.cpp  cdr_request.cpp  cdr_request_queue.cpp  config_reader.cpp  logger.cpp  main.cpp  operator.cpp  server.cpp  session.cpp
tests/: CMakeLists.txt
